     Add a TrustedUserCAKeys option to sshd_config to specify CA keys that
     are trusted to authenticate users (in addition than doing it per-user
     in authorized_keys).
     
     Add a RevokedKeys option to sshd_config and a @revoked marker to
     known_hosts to allow keys to me revoked and banned for user or host
     authentication.
     
     feedback and ok markus@

20100303
 - (djm) [PROTOCOL.certkeys] Add RCS Ident
 - OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2010/02/26 22:09:28
     [ssh-keygen.1 ssh.1 sshd.8]
     tweak previous;
   - otto@cvs.openbsd.org 2010/03/01 11:07:06
     [ssh-add.c]
     zap what seems to be a left-over debug message; ok markus@
   - djm@cvs.openbsd.org 2010/03/02 23:20:57
     [ssh-keygen.c]
     POSIX strptime is stricter than OpenBSD's so do a little dance to
     appease it.
 - (djm) [regress/cert-userkey.sh] s/echo -n/echon/ here too

20100302
 - (tim) [config.guess config.sub] Bug 1722: Update to latest versions from
   http://git.savannah.gnu.org/gitweb/ (2009-12-30 and 2010-01-22
   respectively).

20100301
 - (dtucker) [regress/{cert-hostkey,cfgmatch,cipher-speed}.sh} Replace
   "echo -n" with "echon" for portability.
 - (dtucker) [openbsd-compat/port-linux.c] Make failure to write to the OOM
   adjust log at verbose only, since according to cjwatson in bug #1470
   some virtualization platforms don't allow writes.

20100228
 - (djm) [auth.c] On Cygwin, refuse usernames that have differences in
   case from that matched in the system password database. On this
   platform, passwords are stored case-insensitively, but sshd requires
   exact case matching for Match blocks in sshd_config(5). Based on
   a patch from vinschen AT redhat.com.
 - (tim) [ssh-pkcs11-helper.c] Move declarations before calling functions
   to make older compilers (gcc 2.95) happy.

20100227
 - (djm) [ssh-pkcs11-helper.c ] Ensure RNG is initialised and seeded
 - (djm) [openbsd-compat/bsd-cygwin_util.c] Reduce the set of environment